Clean up background, add border, fix page cutting off upwards if height is too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,23 @@
 }
 
 html, body {
+    width: 100%;
     height: 100%;
     margin: 0;
-    padding: 0;
 }
 
-#page-wrapper {
+#page-wrapper,
+#content-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+}
+
+#content-wrapper {
+    width: fit-content;
+    border: 1px solid #000000;
+    margin: 10px 0px;
     background-color: #dfdfdf;
 }
 
